{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 716,
  "lineage": "a12f24f2-4720-21a5-1362-5e62c2dcb24f",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b529f3487c2c0e7f",
            "arn": "arn:aws:ec2:us-east-1:741448950494:instance/i-09091414af8c543be",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09091414af8c543be",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ops-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f965e99f8ba68ab4",
            "private_dns": "ip-10-0-1-245.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.245",
            "public_dns": "ec2-184-73-140-211.compute-1.amazonaws.com",
            "public_ip": "184.73.140.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c2e66d3d76e650c2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f0824f06e8c1c76c",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06e521aea67fd48d2"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.sshkey",
            "module.ec2.data.aws_ami.ubuntu",
            "module.networking.aws_security_group.Main-VPC-Firewall",
            "module.networking.aws_subnet.Ec2-Subnet",
            "module.networking.aws_vpc.Main-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Main-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448950494:internet-gateway/igw-0cca936ee352209bf",
            "id": "igw-0cca936ee352209bf",
            "owner_id": "741448950494",
            "vpc_id": "vpc-024688fca203e5348"
          },
          "dependencies": [
            "module.ec2.module.networking.aws_vpc.Main-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Main-IGW-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448950494:route-table/rtb-0061c0d038ba783d3",
            "id": "rtb-0061c0d038ba783d3",
            "owner_id": "741448950494",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cca936ee352209bf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-024688fca203e5348"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.module.networking.aws_internet_gateway.Main-IGW",
            "module.ec2.module.networking.aws_vpc.Main-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Main-IGW-RT-Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2414da69843bbe2",
            "route_table_id": "rtb-0061c0d038ba783d3",
            "subnet_id": "subnet-0a152faf910196be1"
          },
          "dependencies": [
            "module.ec2.module.networking.aws_internet_gateway.Main-IGW",
            "module.ec2.module.networking.aws_route_table.Main-IGW-RT",
            "module.ec2.module.networking.aws_subnet.Ec2-Subnet",
            "module.ec2.module.networking.aws_vpc.Main-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Main-VPC-Firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448950494:security-group/sg-08525d79230c0c4b5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08525d79230c0c4b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250510033534446500000003",
            "name_prefix": "terraform-",
            "owner_id": "741448950494",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-024688fca203e5348"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.module.networking.aws_vpc.Main-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Ec2-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448950494:subnet/subnet-0a152faf910196be1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a152faf910196be1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741448950494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-024688fca203e5348"
          },
          "dependencies": [
            "module.ec2.module.networking.aws_vpc.Main-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Main-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448950494:vpc/vpc-024688fca203e5348",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03d9b9d465d23d665",
            "default_route_table_id": "rtb-0b7736c10eec9fa03",
            "default_security_group_id": "sg-06932ca3a8b54cbd1",
            "dhcp_options_id": "dopt-0bb6ce4809e4ac321",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-024688fca203e5348",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b7736c10eec9fa03",
            "owner_id": "741448950494"
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Main-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448950494:internet-gateway/igw-0b687401fe736eb3f",
            "id": "igw-0b687401fe736eb3f",
            "owner_id": "741448950494",
            "vpc_id": "vpc-039893508d6ec922e"
          },
          "dependencies": [
            "module.networking.aws_vpc.Main-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Main-IGW-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448950494:route-table/rtb-007fb86aeb0e7dea3",
            "id": "rtb-007fb86aeb0e7dea3",
            "owner_id": "741448950494",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b687401fe736eb3f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-039893508d6ec922e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.Main-IGW",
            "module.networking.aws_vpc.Main-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Main-IGW-RT-Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac041dd29cbb2f80",
            "route_table_id": "rtb-007fb86aeb0e7dea3",
            "subnet_id": "subnet-0f0824f06e8c1c76c"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.Main-IGW",
            "module.networking.aws_route_table.Main-IGW-RT",
            "module.networking.aws_subnet.Ec2-Subnet",
            "module.networking.aws_vpc.Main-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Main-VPC-Firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448950494:security-group/sg-06e521aea67fd48d2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e521aea67fd48d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250510033534418200000002",
            "name_prefix": "terraform-",
            "owner_id": "741448950494",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-039893508d6ec922e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.Main-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Ec2-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448950494:subnet/subnet-0f0824f06e8c1c76c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0824f06e8c1c76c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741448950494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-039893508d6ec922e"
          },
          "dependencies": [
            "module.networking.aws_vpc.Main-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Main-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448950494:vpc/vpc-039893508d6ec922e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b2e469b4c7c915ab",
            "default_route_table_id": "rtb-006a89abfb8aff0c2",
            "default_security_group_id": "sg-04c92a1a0f0b9cd25",
            "dhcp_options_id": "dopt-0bb6ce4809e4ac321",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-039893508d6ec922e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-006a89abfb8aff0c2",
            "owner_id": "741448950494"
          }
        }
      ]
    }
  ]
}